--- a/CSS-training/index.html
+++ b/CSS-training/index.html
@@ -32,5 +32,13 @@
     </div>
     <p class="first">This is not in the intro section</p>
     <p>The second paragrapch is not in the intro section</p>
+   <hr/>
+    <!--Font family-->
+    <h3 class="font-title">Font families</h3>
+    <p class="serif">This is a paragraph shown in serif font.</p>
+    <p class="sansserif">This is a paragraph shown in sansserif font.</p>
+    <p class="monospace">This is a paragraph shown in monospace font.</p>
+    <p class="cursive">This is a paragraph shown in cursive font.</p>
+    <p class="fantasy">This is a paragraph shown in fantasy font.</p>
   </body>
 </html>
